<resources>
    <string name="app_name">Mester</string>

    <!-- Main screen - projects -->
    <string name="main_screen_settings">Settings</string>
    <string name="projects_empty_list">No projects</string>
    <string name="projects_loading">Loading...</string>
    <string name="delete_project_title">Delete project</string>
    <string name="delete_project_msg">Would you like to delete project %1$s?</string>

    <!-- Add project -->
    <string name="add_project_title">New project</string>
    <string name="add_project_name">Project name</string>
    <string name="add_project_done_btn">Done</string>

    <!-- Testcases -->
    <string name="title_activity_testcases">Test cases</string>
    <string name="testcases_empty_list">No test cases</string>
    <string name="testcases_project_name">Project: %1$s</string>
    <string name="testcases_loading">Loading...</string>
    <string name="delete_testcase_msg">Would you like to delete test case %1$s?</string>
    <string name="delete_testcase_title">Delete test case</string>

    <!-- Add testcase -->
    <string name="title_activity_add_testcase">Add test case</string>
    <string name="add_testcase_done_btn">Done</string>
    <string name="add_testcase_name">Test case title</string>

    <!-- Steps -->
    <string name="title_activity_steps">Steps</string>
    <string name="steps_empty_list">No steps</string>
    <string name="steps_loading">Loading...</string>
    <string name="steps_testcase_title">Test case: %1$s</string>
    <string name="delete_step_msg">Would you like to delete step %1$s?</string>
    <string name="delete_step_title">Delete step</string>

    <!-- Add step -->
    <string name="title_activity_add_step">Add step</string>
    <string name="add_step_number">Step number</string>
    <string name="add_step_text">Step text</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_general_header">General</string>
    <string name="settings_service_url">Service URL</string>
    <string name="title_activity_project_management">Project management</string>

    <!-- Project management -->
    <string name="project_management_testcases">Manage test cases</string>
    <string name="project_management_testing">Testing</string>

    <!-- Testing results -->
    <string name="title_activity_testing_results">Testing results</string>
    <string name="testing_results_empty_list">No tests</string>
    <string name="testing_results_loading">Loading...</string>
    <string name="testing_results_start_new_testing">Start new testing</string>

    <!-- New testing -->
    <string name="title_activity_new_testing">New testing</string>
    <string name="new_testing_empty_list">No test cases for testing</string>
    <string name="new_testing_loading">Loading...</string>
    <string name="testing_results_test_id">Test %1$s</string>
    <string name="new_testing_confirm_quit_testing">Are you sure to quit testing? It will be impossible to continue it</string>
    <string name="new_testing_quit_testing_title">Quit testing</string>

    <!-- Test (during testing) -->
    <string name="title_activity_test">Test</string>
    <string name="test_done_btn">Done</string>
    <string name="test_loading">Loading...</string>
    <string name="test_empty_list">No test steps</string>

    <!-- Testing details -->
    <string name="title_activity_testing_details">Testing details</string>
    <string name="testing_details_empty_list">No testing details</string>
    <string name="testing_details_loading">Loading...</string>

</resources>
