<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.khmelenko.lab.mester.activity.testing.TestingResultsActivity">

    <Button
        android:id="@+id/testingResultsNewTestingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testing_results_start_new_testing"/>

    <ListView
        android:id="@+id/testsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"/>

    <TextView
        android:gravity="center"
        android:id="@+id/testsEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/testing_results_empty_list"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/testsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/testing_results_loading"
            android:gravity="center"
            android:paddingRight="5dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

    </LinearLayout>

</FrameLayout>
